docs: refresh graph root documentation
The root project docs needed to catch up with the current graph module surface after the accepted README hero image: supported database guidance, architecture diagrams, examples workflow, graph-okio DAEAD support, and agent-facing guidance now describe the same project state.

Constraint: Root README content is library-user documentation, so English and Korean README files must stay structurally synchronized.

Rejected: Leaving WIP and agent docs unchanged | they still referenced completed work, the old Spring Boot module context, and stale runtime/dependency facts.

Confidence: high

Scope-risk: narrow

Directive: For future root docs refreshes, verify live issue/PR state before rewriting WIP and keep AGENTS.md/CLAUDE.md in English.

Tested: gh issue list --state open/closed; gh pr list --state merged; magick identify docs/assets/bluetape4k-graph-workbench.png; rg README image references; rg stale runtime/module markers; git diff --check

Not-tested: no Gradle tests run; documentation and image asset only.