@@ -1,36 +1,55 @@
-# CLAUDE.md — bluetape4k-graph
+# CLAUDE.md - bluetape4k-graph
 
-그래프 DB 라이브러리. Neo4j·Memgraph·AGE(PostgreSQL)·TinkerPop·FalkorDB 지원.
-동기/코루틴 이중 API 패턴. Spring Boot 4 AutoConfiguration 포함.
+This repository is a Kotlin graph database integration library for Neo4j,
+Memgraph, Apache AGE, TinkerPop/TinkerGraph, and FalkorDB. It exposes paired
+synchronous/coroutine APIs, virtual-thread adapters, graph-io bulk I/O,
+Ktor 3 integration, Spring Boot 4 auto-configuration, domain examples,
+benchmarks, and a BOM.
 
-- **Kotlin**: 2.3 · **Java**: 25 (preview 활성화 — `--enable-preview`)
-- **의존성 버전**: `buildSrc/src/main/kotlin/Libs.kt`
+- Kotlin: 2.3
+- Java: 21 with preview enabled
+- Dependency versions: `gradle/libs.versions.toml`
+- Keep agent-facing guidance in English.
+- Keep user-facing root README files synchronized between `README.md` and
+  `README.ko.md`.
 
 ## Project Structure
 
-```
+```text
+bom/               # Gradle project: bluetape4k-graph-bom
 graph/
-  graph-core/       # 추상 모델 & 인터페이스
-  graph-age/        # Apache AGE (PostgreSQL extension)
+  graph-core/       # Abstract model, repositories, traversal APIs, capabilities
+  graph-age/        # Apache AGE over PostgreSQL/JDBC
   graph-neo4j/      # Neo4j Java Driver
-  graph-memgraph/   # Memgraph (Neo4j 프로토콜 호환)
-  graph-tinkerpop/  # Apache TinkerPop/Gremlin
-  graph-falkordb/   # FalkorDB (Redis 기반) — jfalkordb 0.7.0
+  graph-memgraph/   # Memgraph through Neo4j-compatible protocol
+  graph-tinkerpop/  # Apache TinkerPop / TinkerGraph
+  graph-falkordb/   # FalkorDB / Redis module, jfalkordb
 graph-io/
-  core/             # 공유 계약·모델·옵션 (GraphIoPaths: Buffered I/O)
-  csv/              # CSV 벌크 임포트/익스포트 × Sync/VT/Suspend
-  jackson2/         # Jackson 2.x NDJSON
-  jackson3/         # Jackson 3.x NDJSON
-  graphml/          # GraphML XML/StAX × Sync/VT/Suspend
+  core/             # Shared records, options, path helpers, external ID map
+  csv/              # CSV import/export
+  jackson2/         # Jackson 2.x NDJSON import/export
+  jackson3/         # Jackson 3.x NDJSON import/export
+  graphml/          # GraphML XML/StAX import/export
+  okio/             # graph-okio: OkIO streams, compression, DAEAD encryption
 benchmark/
-  graph-benchmark/    # JMH — Sync vs VirtualThread
-  graph-io-benchmark/ # JMH — CSV/NDJSON/GraphML 벌크 I/O
+  graph-benchmark/
+  graph-io-benchmark/
+  graph-age-benchmark/
+  graph-neo4j-benchmark/
+ktor/
+  graph-ktor/
 spring-boot/
   graph-spring-boot/
 examples/
-  code-graph-examples/     # 코드 의존성 그래프 예시
-  linkedin-graph-examples/ # LinkedIn 소셜 그래프 예시
+  code-graph-examples/
+  fraud-detection-examples/
+  knowledge-graph-examples/
+  linkedin-graph-examples/
+  recommendation-examples/
+  ktor-graph-examples/
 ```
+
+`examples/` modules are not published to Maven Central.
 
 ## Build Commands
 
@@ -38,62 +57,94 @@ examples/
 ./gradlew build -x test
 ./gradlew test
 ./gradlew :graph-neo4j:build
+./gradlew :graph-okio:test
 ./gradlew :code-graph-examples:test
+./gradlew :fraud-detection-examples:test
+./gradlew :knowledge-graph-examples:test
+./gradlew :recommendation-examples:test
 ./gradlew :graph-neo4j:test --tests "io.bluetape4k.graph.neo4j.Neo4jGraphOperationsTest"
-./gradlew publishBluetapeGraphPublicationToMavenLocalRepository   # local
-./gradlew publishAggregationToCentralPortal                       # Maven Central
+./gradlew publishBluetapeGraphPublicationToMavenLocalRepository
+./gradlew publishAggregationToCentralPortal
 ```
 
 ## Architecture
 
-### 핵심 추상화 (`graph-core`)
+`graph-core` owns the common model and contracts. Backend modules implement
+those contracts with each database's driver and query language.
 
-**이중 API 패턴**: 동기(`Graph*`) + 코루틴(`GraphSuspend*`) 쌍.
-
-```
+```text
 GraphOperations = GraphSession + GraphVertexRepository + GraphEdgeRepository + GraphTraversalRepository
 GraphSuspendOperations = GraphSuspendSession + GraphSuspendVertexRepository + ...
 ```
 
-**모델 타입**: `GraphVertex(id, label, properties)`, `GraphEdge(id, label, startId, endId, properties)`, `GraphPath`, `GraphElementId`
+Core concepts:
 
-**스키마 DSL** (`VertexLabel`, `EdgeLabel`) — Exposed Table 스타일 선언:
+- Models: `GraphVertex`, `GraphEdge`, `GraphPath`, `GraphElementId`
+- Schema DSL: `VertexLabel`, `EdgeLabel`
+- Batch insert: `createVertices`, `createEdges`
+- Schema/index capability: `schemaManager()`
+- Merge/upsert capability: `mergeVertex`, `mergeEdge`
+- Transaction DSL: `transaction { }`, `suspendTransaction { }`
+- Weighted path and graph algorithms where backend semantics support them
 
-```kotlin
-object PersonLabel : VertexLabel("Person") {
-    val name = string("name")
-    val age = integer("age")
-}
-```
+## Backends
 
-### 백엔드
+| Module | Driver | Query language | Local verification |
+|---|---|---|---|
+| `graph-neo4j` | Neo4j Java Driver | Cypher | Testcontainers `neo4j:5` |
+| `graph-memgraph` | Neo4j Java Driver compatible | Cypher | Testcontainers `memgraph/memgraph` |
+| `graph-age` | PostgreSQL JDBC + Exposed | Cypher-over-SQL | Testcontainers `apache/age:PG16_latest` |
+| `graph-tinkerpop` | TinkerGraph | Gremlin | In-memory JVM graph |
+| `graph-falkordb` | jfalkordb 0.7.0, Jedis-based | openCypher subset | Testcontainers `falkordb/falkordb:v4.18.1` |
 
-| 모듈 | 드라이버 | 쿼리 언어 |
-|------|---------|---------|
-| `graph-neo4j` | Neo4j Java Driver | Cypher |
-| `graph-memgraph` | Neo4j Java Driver (호환) | Cypher |
-| `graph-age` | PostgreSQL JDBC + Exposed | Cypher-over-SQL (AGE) |
-| `graph-tinkerpop` | TinkerGraph (인메모리) | Gremlin |
-| `graph-falkordb` | jfalkordb 0.7.0 (Jedis 기반) | openCypher (부분집합) |
+Amazon Neptune implementation is blocked by issue #113 until local or reliable
+integration testability is proven. Do not build Neptune support against mocks
+only.
 
-## 테스트 패턴
+## graph-io
 
-Testcontainers: `io.bluetape4k.testcontainers.graphdb` 패키지 singleton 사용:
+The `graph-io` family provides CSV, Jackson2/Jackson3 NDJSON, GraphML, and
+OkIO-based import/export paths with sync, virtual-thread, and coroutine
+execution models where applicable. `graph-okio` also supports compression
+chaining and DAEAD chunk encryption/decryption.
+
+When touching graph-io:
+
+- keep duplicate-ID and missing-endpoint import semantics intact
+- run cross-format round-trip tests for affected formats
+- run graph-okio negative-path tests when compression or encryption changes
+- use `io.bluetape4k.assertions.assertFailsWith` for exception assertions
+
+## Test Patterns
+
+Use singleton Testcontainers launchers from
+`io.bluetape4k.testcontainers.graphdb`:
 
 ```kotlin
 import io.bluetape4k.testcontainers.graphdb.Neo4jServer
-val driver = GraphDatabase.driver(Neo4jServer.Launcher.neo4j.boltUrl, AuthTokens.none())
+
+val driver = GraphDatabase.driver(
+    Neo4jServer.Launcher.neo4j.boltUrl,
+    AuthTokens.none(),
+)
 ```
 
-**examples 추상 테스트 패턴**: 공통 로직은 `Abstract*Test`, 백엔드별 `ops` 는 구체 클래스 오버라이드:
+Example modules share behavior through abstract test classes. Concrete backend
+tests should only provide `ops` and server lifecycle details.
 
-```kotlin
-class Neo4jCodeGraphTest : AbstractCodeGraphTest() {
-    private val driver = GraphDatabase.driver(Neo4jServer.Launcher.neo4j.boltUrl, AuthTokens.none())
-    override val ops = Neo4jGraphOperations(driver)
-    @AfterAll fun teardown() { driver.close() }
-}
-```
+The `testMutex` BuildService serializes container-heavy tests to avoid runtime
+conflicts. `.github/workflows/examples.yml` owns daily and path-triggered
+example verification; do not duplicate that coverage inside Nightly unless the
+Nightly contract explicitly changes.
 
-테스트 병렬 실행 시 `testMutex` BuildService 로 순차 실행 강제 (컨테이너 충돌 방지).
-`examples/` 모듈은 Maven Central 배포 제외.
+## Documentation Rules
+
+- Public/contributor-facing docs, KDoc, PRs, issues, commits, and release notes
+  should be English.
+- Root README content is library-user documentation: keep English and Korean
+  variants synchronized.
+- README diagrams should use Mermaid.
+- Root README hero assets live under `docs/assets/`; use image generation for
+  final raster art and treat `.github/profile/assets/` only as visual direction.
+- Update `WIP.md`, `CHANGELOG.md`, and `docs/lessons/` when project state
+  changes.
